--- a/popup.html
+++ b/popup.html
@@ -1,52 +1,275 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:color="http://www.w3.org/1999/xhtml">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src='js/popup.js'></script>
+
     <title>Auto buy&sell Remitano</title>
 </head>
-<body style="width: 500px;">
-<h2 style="text-align: center;color: #5bc0de">   Auto buy&sell Remitano</h2>
-<h5 style="text-align: center;color: gray;    margin-top: -10px;">@Author:PhuongCong - v1.01</h5>
+<body style="width: 600px;">
+
+<h1 style="text-align: center;color: #5bc0de"> Auto buy&sell Remitano</h1>
+<h4 style="text-align: center;color: gray;font-weight: normal;    margin-top: -10px;">@Author:PhuongCong - v1.0</h4>
 <hr>
-<h2 style="color: gray;font-weight: normal">   1, Login acc in https://remitano.com</h2>
-<h2 style="color: gray;font-weight: normal">   2, Buy: Creat a ads buy</h2>
-<h2 style="color: gray;font-weight: normal">   3, Sell: Creat a ads sell</h2>
-<h2 style="color: gray;font-weight: normal">   4, Choose action, then click into 'SAVE' button</h2>
-<table style="width: 500px">
+<button id="tab1" class="btn_tab">
+    Auto mua|Bán
+</button>
+<button id="tab2" class="btn_tab">
+    Đơn tiềm năng
+</button>
+<br>
+<br>
+<div id="body-tab1">
+
+<table style="width: 600px">
     <thead>
     <tr id="radio-group">
-        <th><label class="container" style="color: #d9534f!important;">Buy
+        <th><label class="container" style="font-size:18px;color: #d9534f!important;">Tự động mua
 
             <input id="radio1" type="radio" name="theRadioGroupName" value="1">
             <span class="checkmark"></span>
         </label></th>
-        <th><label class="container" style="color: #5cb85c!important;">Sell
-            <input  id="radio2" type="radio" name="theRadioGroupName" value="2">
+        <th><label class="container" style="font-size:18px;color: #5cb85c!important;">Tự động bán
+            <input id="radio2" type="radio" name="theRadioGroupName" value="2">
             <span class="checkmark"></span>
         </label></th>
-        <th><label class="container">Off
-            <input  id="radio3" type="radio" name="theRadioGroupName" value="3" >
+        <th><label class="container" style="font-size:18px;">Tắt
+            <input id="radio3" type="radio" name="theRadioGroupName" value="3">
             <span class="checkmark"></span>
         </label></th>
     </tr>
     </thead>
 
 </table>
-<br>
-<div style="    text-align: center;">
-    <button id="btn-save" class="button button1" >SAVE</button>
+<table id="mua-ban" style="width: 600px">
+    <thead>
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;display: none;">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span>。</span>ID quảng cáo</label></td>
+        <td><input id="input-id" class="w3-input" style=" height: 25px " type="number"></td>
+        <td><label style="font-size: 12px;color: red" id="error"></label></td>
+    </tr>
+
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span>。</span>URL chi tiết QC</label></td>
+        <td><input id="input-url-ad" class="w3-input" style=" height: 25px " type="text"></td>
+        <td><label style="font-size: 12px;color: red" id="error-url"></label></td>
+    </tr>
+
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;" id="div-input-ban">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span>。</span>Thấp nhất có thể bán </label></td>
+        <td><input id="input-ban" class="w3-input" style=" height: 25px " type="number"></td>
+        <td><label style="font-size: 12px;color: red" id="error-ban"></label></td>
+    </tr>
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;" id="div-input-mua">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span >。</span>Cao nhất có thể mua </label></td>
+        <td><input id="input-mua" class="w3-input" style=" height: 25px " type="number"></td>
+        <td><label style="font-size: 12px;color: red" id="error-mua"></label></td>
+    </tr>
+
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span>。</span>Mốc số lượng</label></td>
+        <td><input id="input-sle" class="w3-input" style=" height: 25px " type="number"></td>
+        <td><label style="font-size: 12px;color: red" id="error-sle"></label></td>
+    </tr>
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span style="color: gray">。</span>Bám theo đối tượng </label></td>
+        <td><input id="input-folow-user" class="w3-input" style=" height: 25px " type="text"></td>
+        <td><label style="font-size: 12px;color: red" id="error-user"></label></td>
+    </tr>
+    </tbody>
+
+</table>
+
 
 </div>
 
+<div id="body-tab2">
+    <table  style="width: 600px">
+        <thead>
+        <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><label style="font-size: 16px;color: gray;width: 40%;" ><span >。</span>Chạy chức năng này</label></td>
+            <td>
+                <label class="switch">
+                    <input id="inputSw" type="checkbox" name="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </td>
+            <td></td>
+        </tr>
+        <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+            <td><label style="font-size: 16px;color: gray;width: 40%"><span style="color: gray;">。</span>Mua giá rẻ</label></td>
+            <td><input id="input-buy-more" class="w3-input" style=" height: 25px " type="number"></td>
+            <td><label style="font-size: 12px;color: red" id="error-buy"></label></td>
+        </tr>
+        <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+            <td><label style="font-size: 16px;color: gray;width: 40%"><span style="color: gray;">。</span>Bán giá cao</label></td>
+            <td><input id="input-sell-more" class="w3-input" style=" height: 25px " type="number"></td>
+            <td><label style="font-size: 12px;color: red" id="error-sell"></label></td>
+        </tr>
+
+        </tbody>
+    </table>
+    <label style="    margin: 19px;
+    font-size: 15px;
+    color: red;
+    font-weight: bold;">Chú ý: </label>
+    <p > - Đối với giá bán, nếu bot tìm thấy ai đó để giá cao hơn giá bán đặt trước thì bot sẽ tự động bán</p>
+    <p > - Đối với giá mua, nếu bot tìm thấy ai đó để giá thấp hơn giá mua đặt trước thì bot sẽ tự động mua</p>
+    <p > - Nếu bạn để trống bot sẽ không chạy chức năng này :D</p>
+    <br>
 
 
+</div>
+<div style="    text-align: center; margin: 10px">
+    <button id="btn-save" class="button button1">LƯU</button>
 
+</div>
 </body>
 
 <style>
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+    .switch #inputSw {display:none;}
+
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    #inputSw:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    #inputSw:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    #inputSw:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
+    p{
+        margin-left: 30px;
+        margin-top: 0px;font-style: italic;margin-bottom: 3px;color: gray
+    }
+      hr{
+          margin-bottom: 0px;
+          background-color: blue;
+          color: blue;
+      }
+     #body-tab1{
+         height: 290px;
+     }
+      #body-tab2{
+          height: 290px;
+      }
+    .btn_tab{
+        width: 49%;
+        height: 50px;
+        font-size: 18px;
+        background: white;
+        outline:0;
+        cursor: pointer;
+        color: gray;
+        border: none;
+
+
+    }
+     .btn_tab:focus{
+         outline:0;
+
+         cursor: pointer;
+         width: 49%;
+         height: 50px;
+         font-size: 18px;
+         background: white;
+         color: gray;
+         border: none;
+
+     }
+    span {
+        color: red;
+        font-weight: bold;
+    }
+
+    input {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        padding-left: 8px;
+        padding-right: 8px;
+        border-radius: 15px;
+        height: 28px !important;
+        border: 0.6px solid gray;
+
+    }
+
+    input:focus {
+        border-radius: 0;
+    }
+    .button1:focus{
+        background-color: #5bc0de;
+        color: white;
+        border-radius: 4px;
+        border: 0.6px solid #5bc0de;
+    }
+    .button:focus{
+        background-color: #5bc0de;
+        color: white;
+        border-radius: 4px;
+        border: 0.6px solid #5bc0de;
+    }
+
     /* The container */
     .container {
-        width: 33%;
+        width: 50%;
         display: block;
         font-weight: normal;
         position: relative;
@@ -110,11 +333,12 @@
         border-radius: 50%;
         background: white;
     }
+
     .button {
-        background-color: white; /* Green */
+        background-color: #f3910e; /* Green */
         border: none;
         color: white;
-        padding: 8px 32px;
+        padding: 8px 50px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
@@ -124,16 +348,18 @@
         transition-duration: 0.4s;
         cursor: pointer;
     }
+
     .button1 {
-        background-color:  #5bc0de;
+        background-color: #5bc0de;
         color: white;
-        border-radius: 10px;
+        border-radius: 4px;
         border: 0.6px solid #5bc0de;
 
     }
+
     .button1:hover {
-        background-color: white;
-        color: gray;
+        background-color: #f3910e;
+        color: white;
     }
 </style>
 </html>
