--- a/popup.html
+++ b/popup.html
@@ -83,6 +83,11 @@
         <td><input id="input-folow-user" class="w3-input" style=" height: 25px " type="text"></td>
         <td><label style="font-size: 12px;color: red" id="error-user"></label></td>
     </tr>
+    <tr style="    margin-top: 20px;margin-bottom: 20px;width: 600px!important;">
+        <td><label style="font-size: 16px;color: gray;width: 40%"><span style="color: gray">。</span>Khoảng (s) thay đổi giá</label></td>
+        <td><input id="input-time-dur" class="w3-input" style=" height: 25px " type="number"></td>
+        <td><label style="font-size: 12px;color: red" id="error-time-dur"></label></td>
+    </tr>
     </tbody>
 
 </table>
@@ -206,10 +211,10 @@
           color: blue;
       }
      #body-tab1{
-         height: 290px;
+         height: 345px;
      }
       #body-tab2{
-          height: 290px;
+          height: 345px;
       }
     .btn_tab{
         width: 49%;
