--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,11 @@
 </head>
 <body style="width: 650px;">
 
-<h1 style="text-align: center;color: #5bc0de"> Auto buy&sell Remitano</h1>
+<h1 style="text-align: center;color: #5bc0de"> Auto buy&sell ETH Remitano</h1>
 <h4 style="text-align: center;color: gray;font-weight: normal;    margin-top: -10px;">@Author:PhuongCong - v1.0</h4>
 <hr>
 <button id="tab1" class="btn_tab">
-    Auto mua|Bán
+    ĐẶT QC ETH
 </button>
 <button id="tab2" class="btn_tab" disabled>
     Đơn tiềm năng
